--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".UI.MovieDetailsActivity">
 
         </activity>
+        <activity android:name=".UI.MovieListActivity"/>
     </application>
 
 </manifest>
